--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,65 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('hello %s', 'corgi');
+    console.log(`hello ${dogs}`);
 
     // Styled
+    console.log('%c hello I am a pretty dog', 'color: aliceblue; text-shadow: 5px 5px 0 blue');
 
     // warning!
+    console.warn('on noooo')
 
     // Error :|
+    console.error('on noooo')
 
     // Info
+    console.info('Crocodiles do not eat cute dogs')
 
     // Testing
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('dog'), 'that is not dog')
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p);
+    console.clear();
 
     // Grouping together
+    dogs.forEach(dog =>{
+      console.groupCollapsed(`${dog.name}`)
+      console.log(`My name is ${dog.name}`);
+      console.log(`I am ${dog.age} years old`);
+      console.log(`I am ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`)
 
+    }
+    )
     // counting
+    console.count('dog');
+    console.count('cat');
+    console.count('dog');
+    console.count('dog');
+    console.count('dog');
+
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/mockturtlesoup')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      })
+
+    //table
+    console.table(dogs);  
 
   </script>
 </body>
