--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -104,6 +104,30 @@
   </div>
 
 <script>
+const checkboxes = document.querySelectorAll('.inbox [type = "checkbox"]');
+console.log(checkboxes);
+
+let lastChecked;
+
+checkboxes.forEach(checkbox => checkbox.addEventListener(
+  'click', handleCheck));
+let inBetween = false;
+function handleCheck(e) {
+  if(e.shiftKey && this.checked){
+    checkboxes.forEach( checkbox => {
+      console.log(checkbox);
+      if (checkbox === this || checkbox === lastChecked) {
+        inBetween = !inBetween;
+        console.log('STarting to check them inbetween!');
+      }
+
+      if (inBetween) {
+        checkbox.checked = true;
+      }
+    });
+  }
+  lastChecked = this;
+}
 </script>
 </body>
 </html>
